third_party/move/move-compiler-v2/tests/ability-check/typing/derefrence_reference.no-opt.exp

Diagnostics:
error: local `r` of type `M::R` does not have the `copy` ability
  ┌─ tests/reference-safety/derefrence_reference.move:6:16
  │
6 │         R {} = *r;
  │                ^^ reference content copied here

error: local `b` of type `M::B` does not have the `copy` ability
  ┌─ tests/reference-safety/derefrence_reference.move:7:24
  │
7 │         B { r: R{} } = *b;
  │                        ^^ reference content copied here

error: value of type `M::R` does not have the `copy` ability
  ┌─ tests/reference-safety/derefrence_reference.move:8:17
  │
8 │         R{} = *&b.r;
  │                 ^^^ reference content copied here

error: local `r` of type `M::R` does not have the `copy` ability
   ┌─ tests/reference-safety/derefrence_reference.move:12:16
   │
12 │         R {} = *r;
   │                ^^ reference content copied here

error: local `b` of type `M::B` does not have the `copy` ability
   ┌─ tests/reference-safety/derefrence_reference.move:13:24
   │
13 │         B { r: R{} } = *b;
   │                        ^^ reference content copied here

error: value of type `M::R` does not have the `copy` ability
   ┌─ tests/reference-safety/derefrence_reference.move:14:17
   │
14 │         R{} = *&b.r;
   │                 ^^^ reference content copied here

error: value of type `M::R` does not have the `copy` ability
   ┌─ tests/reference-safety/derefrence_reference.move:15:21
   │
15 │         R{} = *&mut b.r;
   │                     ^^^ reference content copied here
